--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -91,12 +91,13 @@ jobs:
         - name: Update tag/image in kubernetes deployment manifest
           run: | 
               
-                sed -i "s|image: .*|image: ${{ secrets.DOCKER_USERNAME }}/product-catalog:${{github.run_id}}|" kubernetes/productcatalog/deploy.yaml
+               sed -i "s|image: .*|image: ${{ secrets.DOCKER_USERNAME }}/product-catalog:${{github.run_id}}|" kubernetes/productcatalog/deploy.yaml
         
         - name: Commit and push changes
           run: |
             git config --global user.email "sahilfs17@gmail.com"
             git config --global user.name "Sahil Sayyed"
+            git remote set-url origin https://x-access-token:${{ secrets.TOKEN }}@github.com/Sahilfs17/Opentelemetry.git
             git add kubernetes/productcatalog/deploy.yaml
             git commit -m "[CI]: Update product catalog image tag"
             git push origin HEAD:main -f
